// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate Active color: it should be invalid because there are too many characters 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 48,
      "message": "Active color: Unexpected count, found \\"2\\", expected field length to be \\"1\\", at index 48",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR wb KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Active color: it should be invalid with any character besides "w" or "b 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 48,
      "message": "Active color: Unexpected value, found \\"p\\", expected one of \\"w|b\\", at index 48",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR p KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Castling availability: it should be invalid due to incorrect character 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 53,
      "message": "Castling availability: Unexpected value, found \\"p\\", expected one of \\"q\\", at index 53",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkp c6 0 2",
  "valid": false,
}
`;

exports[`Validate Castling availability: it should be invalid due to incorrect order 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 51,
      "message": "Castling availability: Unexpected value, found \\"K\\", expected one of \\"k|q\\", at index 51",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w QKkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate En passant target square: it should be invalid with any rank besides 3 or 6 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 54,
      "message": "En passant target square: Unexpected value, found \\"2\\", expected one of \\"3|6\\", at index 54",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq c2 0 2",
  "valid": false,
}
`;

exports[`Validate En passant target square: it should be invalid with too few characters 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 53,
      "message": "En passant target square: Unexpected count, found \\"1\\", expected field length to be \\"2\\", at index 53",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq c 0 2",
  "valid": false,
}
`;

exports[`Validate En passant target square: it should be invalid with too many characters 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 53,
      "message": "En passant target square: Unexpected count, found \\"4\\", expected field length to be \\"2\\", at index 53",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq c3c3 0 2",
  "valid": false,
}
`;

exports[`Validate Full move number: it should be invalid as zero 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 58,
      "message": "Fullmove number: Unexpected value, found \\"0\\", expected one of \\"1-9\\", at index 58",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq c3 1 0",
  "valid": false,
}
`;

exports[`Validate Full move number: it should be invalid with a non number character 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 58,
      "message": "Fullmove number: Unexpected value, found \\"p\\", expected one of \\"1-9\\", at index 58",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq c3 1 p",
  "valid": false,
}
`;

exports[`Validate Half move clock: it should be a number 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 55,
      "message": "Halfmove clock: Unexpected value, found \\"p\\", expected one of \\"0-9\\", at index 55",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq - p 2",
  "valid": false,
}
`;

exports[`Validate Half move clock: it should be invalid when greater than 100 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 55,
      "message": "Halfmove clock: Unexpected value, found \\"101\\", expected field to not exceed \\"100\\", at index 55",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w kq - 101 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: 0 is invalid. Digits must be between 1 - 8 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 18,
      "message": "Piece placement data: Unexpected value, found \\"0\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K|1-8\\", at index 18",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/0/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: 9 is invalid. Digits must be between 1 - 8 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 18,
      "message": "Piece placement data: Unexpected value, found \\"9\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K|1-8\\", at index 18",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/9/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: The character "w" is not valid 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 0,
      "message": "Piece placement data: Unexpected value, found \\"w\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K|1-8\\", at index 0",
    },
  ],
  "fen": "wnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: must not end with slash 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 47,
      "message": "Piece placement data: Unexpected value, found \\"/\\", at index 47",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR/ w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: must not have empty rank 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 9,
      "message": "Piece placement data: Unexpected value, found \\"/\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K|1-8\\", at index 9",
    },
  ],
  "fen": "rnbqkbnr//8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: must not have too many ranks 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 47,
      "message": "Piece placement data: Unexpected count, found \\"9\\", expected rank count to be \\"8\\", at index 47",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: must not start with slash 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 0,
      "message": "Piece placement data: Unexpected value, found \\"/\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K|1-8\\", at index 0",
    },
  ],
  "fen": "/rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: should error on invalid characters 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 0,
      "message": "Piece placement data: Unexpected value, found \\";\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K|1-8\\", at index 0",
    },
  ],
  "fen": ";nbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: should error on two subsequent numbers 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 12,
      "message": "Piece placement data: Unexpected value, found \\"1\\", expected one of \\"p|r|n|b|q|k|P|R|N|B|Q|K\\", at index 12",
    },
  ],
  "fen": "rnbqkbnr/pp11pppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: should error when file count is too high 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 8,
      "message": "Piece placement data: Unexpected count, found \\"9\\", expected file count to not exceed \\"8\\", at index 8",
    },
  ],
  "fen": "rnbqkbnrQ/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: should error when file count is too low 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 6,
      "message": "Piece placement data: Unexpected count, found \\"7\\", expected file count to be \\"8\\", at index 6",
    },
  ],
  "fen": "rnbqkbn/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate Piece placement data: should error when rank count is too low 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 29,
      "message": "Piece placement data: Unexpected count, found \\"7\\", expected rank count to be \\"8\\", at index 29",
    },
  ],
  "fen": "pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate field count should be invalid because of too few fields 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 58,
      "message": "Fields: Unexpected count, found \\"5\\", expected field count to be \\"6\\", at index 58",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0",
  "valid": false,
}
`;

exports[`Validate field count should be invalid because of too many fields 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 62,
      "message": "Fields: Unexpected count, found \\"7\\", expected field count to be \\"6\\", at index 62",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2 2",
  "valid": false,
}
`;

exports[`Validate whitespace FEN must not end with an empty string 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 61,
      "message": "Whitespace: Unexpected value, found \\" \\", at index 61",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2 ",
  "valid": false,
}
`;

exports[`Validate whitespace FEN must not have repeated empty strings 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 48,
      "message": "Whitespace: Unexpected value, found \\" \\", at index 48",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR  w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate whitespace FEN must not start with an empty string 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 0,
      "message": "Whitespace: Unexpected value, found \\" \\", at index 0",
    },
  ],
  "fen": " rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR w KQkq c6 0 2",
  "valid": false,
}
`;

exports[`Validate whitespace FEN must not use non ASCII white space 1`] = `
Object {
  "errors": Array [
    ParseError {
      "index": 47,
      "message": "Whitespace: Unexpected value, found \\"	\\", expected ASCII space \\" \\", at index 47",
    },
  ],
  "fen": "rnbqkbnr/pp1ppppp/8/2p5/4P3/8/PPPP1PPP/RNBQKBNR	w KQkq c6 0 2",
  "valid": false,
}
`;
